# ndsquared-rustapi

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml
.github/workflows/: cq_check.yaml  find_and_replace.yaml  release.yaml  release_and_publish.yaml
deploy/kustomization/: deployment.yaml  kustomization.yaml  service.yaml
src/: battlesnake.rs  main.rs
