[package]
name = "ndsquared-rustapi"
version = "1.9.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", featuures = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9.1"
strum = "0.24.1"
strum_macros = "0.24.1"

[dev-dependencies]
test-log = "0.2.11"
